# C_Opengl_legasy_Test

./: CMakeLists.txt  README.md
include/: camera.h  collision_detector.h  const.h  drawer.h  game.h  game_over_state.h  game_state.h  glut_helper.h  inharitance_tester.h  menu_state.h  move_data.h  pause_state.h  player.h  road.h  road_object.h  road_rect.h  shape.h  shape_data.h  shape_updater.h  state.h  stats.h  text.h  util.h  vertex.h  window.h
src/: camera.c  collision_detector.c  const.c  drawer.c  game.c  game_over_state.c  game_state.c  glut_helper.c  inharitance_tester.c  main.c  menu_state.c  move_data.c  pause_state.c  player.c  road.c  road_object.c  road_rect.c  shape.c  shape_data.c  shape_updater.c  stats.c  text.c  util.c  vertex.c  window.c
